# hotkey-detective

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.adoc
.github/workflows/: cmake-single-platform.yml
dll/: CMakeLists.txt  HkdHook.cpp  HkdHook.h  dllmain.c  dllmain.h
include/: CloseDialog.hpp  Core.h  HotkeyTable.h  KeySequence.h  MainWindow.h  WindowsUtils.h  core.h  core_old.h  debug.h  dllmain.h  ipc.h  main.h
res/: resource.h  resources.rc
res/project/: project.aps  project.cpp  project.rc  project.sln  project.vcxproj  project.vcxproj.filters  resource.h
src/: Core.cpp  HotkeyTable.cpp  KeySequence.cpp  MainWindow.cpp  WindowsUtils.cpp  core.c  core.cpp  dllmain.c  main.c  main.cpp
